--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
           <div class="home__data">
 
-            <span class="home__greeting">Hello, I am <h1 class="home__name">Anzindh</h1></span>
+            <span class="home__greeting">Hello, I am <h1 class="home__name"> </h1></span>
 
           </div>
           
