--- a/index.html
+++ b/index.html
@@ -167,35 +167,36 @@
             <div class="about__info">
               <div class="about__box">
 
-                <i class="bx bxs-briefcase-alt-2 about__icon"></i>
-                <h3 class="about__title">Projects</h3>
-                <span class="about__subtitle">Lorem ipsum dolor sit amet</span>
+
+
+
               </div>
 
               <div class="about__box">
                 <i class="bx bx-award about__icon"></i>
                 <h3 class="about__title">Certificates</h3>
-                <span class="about__subtitle">Lorem ipsum dolor sit amet</span>
+                <p class="about__description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                  eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                  enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                  nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                  in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                  nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                  sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+                <a href="#contact" class="button">Contact me</a>
               </div>
 
-              <div class="about__box"> 
+              <!-- <div class="about__box"> 
                     <i class='bx bx-shield-minus about__icon'></i>
                     <h3 class="about__title">Lore ipsum</h3>
                     <span class="about__subtitle">Lorem ipsum dolor sit amet</span>
                 </div>
-            </div>
+            </div> -->
 
-              <p class="about__description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                sunt in culpa qui officia deserunt mollit anim id est laborum.
-              </p>
 
-              <a href="#contact" class="button">Contact me</a>
+
+              
             
           </div>
         </div>
