--- a/index.html
+++ b/index.html
@@ -513,6 +513,18 @@
             <a href="#contact" class="footer__link">Contact</a>
           </li>
         </ul>
+
+        <ul class="footer__social">
+
+          <a href="https://www.linkedin.com/in/anzindh/"target="_blank" class="footer__social-link">
+            <i class='bx bxl-linkedin-square'></i>
+          </a>
+        
+          <a href="https://github.com/Anzindh"target="_blank" class="footer__social-link">
+            <i class='bx bxl-github'></i>
+          </a>
+
+        </ul>
       </div>
     </footer>
 
