Scroll reveal animations

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
               <div class="contact__card">
                 <i class='bx bxs-envelope contact__card-icon'></i>
                 <h3 class="contact__card-title">Email</h3>
-                <!-- <span class="contact__card-data">anzindh@gmail.com</span> -->
+
                 <a href="mailto:anzindh@gmail.com" target="" class="contact__button">Write here <i class='bx bx-mail-send' ></i></a>
               </div>
             </div>
@@ -487,7 +487,7 @@
               <div class="contact__card">
                 <i class='bx bxl-whatsapp-square contact__card-icon'></i>
                 <h3 class="contact__card-title">Whatsapp</h3>
-                <!-- <span class="contact__card-data">+91 8078114073</span> -->
+
                 <a href="https://api.whatsapp.com/send?phone=+918078114073&text=Hello" target="" class="contact__button">write here<i class='bx bxl-whatsapp' ></i></a>
               </div>
             </div>
@@ -529,13 +529,11 @@
     </footer>
 
     <!--=============== SCROLLREVEAL ===============-->
-    <script src=""></script>
+    <script src="assets/js/scrollreveal.min.js"></script>
 
     <!--=============== SWIPER JS ===============-->
     <script src="assets/js/swiper-bundle.min.js"></script>
 
-    <!--=============== MIXITUP FILTER ===============-->
-    <script src=""></script>
 
     <!--=============== MAIN JS ===============-->
     <script src="assets/js/main.js"></script>
