Scrolling synced with nav menu

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
                   <div class="info">
                     <div class="info__icon">
-                      <i class='bx bxs-info-circle'></i>
+                      <i class='bx bx-chevrons-down'></i>
                     </div>
 
                     <div class="info__border">
@@ -525,6 +525,10 @@
           </a>
 
         </ul>
+
+        <div class="footer__copy">
+          &#169; Anzindh. All rights reserved
+        </div>
       </div>
     </footer>
 
