--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
       <!--=============== ABOUT ===============-->
       <section class="about section" id="about">
-        <span class="section__subtitle">I am</span>
+        <span class="section__subtitle"><i class='bx bxs-user-circle'></i></i></span>
         <h2 class="section__title">About Me</h2>
 
         <div class="about__container container grid">
@@ -200,7 +200,7 @@
               </div>
 
               <div class="about__box">
-                <i class='bx bxs-user-pin about__box-icon'></i>
+                <i class='bx bx-smile about__box-icon'></i>
                 <h3 class="about__title">I am</h3>
                 <p class="about__description">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -220,7 +220,7 @@
 
       <!--=============== SKILLS ===============-->
       <section class="skills section" id="skills">
-        <span class="section__subtitle">My abilities</span>
+        <span class="section__subtitle"><i class='bx bx-wrench'></i></span>
           <h2 class="section__title">My Skills</h2>
 
           <div class="skills__container container grid">
@@ -421,8 +421,8 @@
 
       <!--=============== WORK==================-->
       <section class="work section" id="work">
-        <span class="section__subtitle">Projects</span>
-          <h2 class="section__title">Recent Works</h2>
+        <span class="section__subtitle"><i class='bx bxs-folder-open' ></i></span>
+          <h2 class="section__title">Recent Projects</h2>
 
           <div class="work__container container swiper">
           <div class="swiper-wrapper">
@@ -467,7 +467,7 @@
 
       <!--=============== CONTACT ===============-->
       <section class="contact section" id="contact">
-        <span class="section__subtitle">Get in touch</span>
+        <span class="section__subtitle"><i class='bx bx-mail-send'></i></span>
         <h2 class="section__title">Contact me</h2>
 
         <div class="contact__container container grid">
