--- a/index.html
+++ b/index.html
@@ -203,13 +203,12 @@
                 <i class='bx bx-smile about__box-icon'></i>
                 <h3 class="about__title">I am</h3>
                 <p class="about__description">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                  eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                  enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                  nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                  in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                  nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                  sunt in culpa qui officia deserunt mollit anim id est laborum.
+                  I am a full stack web developer, with a vast array of knowledge in many different 
+                  front end and back end languages,responsive frameworks, databases and best code practices. 
+                  Working for Mindcoopers, I am dedicated to perfecting my craft by learning from 
+                  most seasoned developers. 
+                  I take pride in delivering best solution for our clients based on their requirements to improve 
+                  their customer's experience through the website or mobile app
                 </p>
                 <a href="#contact" class="button">Contact me</a>
               </div>
