--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <i class='bx bx-smile about__box-icon'></i>
                 <h3 class="about__title">I am</h3>
                 <p class="about__description">
-                  I am a full stack web developer, with a vast array of knowledge in many different 
+                  web developer, with a vast array of knowledge in many different 
                   front end and back end languages,responsive frameworks, databases and best code practices. 
                   Working for Mindcoopers, I am dedicated to perfecting my craft by learning from 
                   most seasoned developers. 
