--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                   Working for Mindcoopers, I am dedicated to perfecting my craft by learning from 
                   most seasoned developers. 
                   I take pride in delivering best solution for our clients based on their requirements to improve 
-                  their customer's experience through the website or mobile app
+                  their customer's experience through the website or mobile app.
                 </p>
                 <a href="#contact" class="button">Contact me</a>
               </div>
