Spelling mistakes in skills

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                       <div class="skills__data">
                         <i class='bx bxs-color'></i>
                         <div>
-                          <h3 class="skills__name">Boot Strap</h3>
+                          <h3 class="skills__name">Bootstrap</h3>
                           <span class="skills__level">
                             <i class='bx bx-checkbox-square'></i>
                             <i class='bx bx-checkbox-square'></i>
@@ -274,7 +274,7 @@
                       <div class="skills__data">
                         <i class='bx bxs-color'></i>
                           <div>
-                            <h3 class="skills__name">Java Script</h3>
+                            <h3 class="skills__name">JavaScript</h3>
                             <span class="skills__level">
                               <i class='bx bx-checkbox-square'></i>
                               <i class='bx bx-checkbox-square'></i>
@@ -288,7 +288,7 @@
                         <div class="skills__data">
                           <i class='bx bxs-color'></i>
                           <div>
-                            <h3 class="skills__name">React JS</h3>
+                            <h3 class="skills__name">React</h3>
                             <span class="skills__level">
                               <i class='bx bx-checkbox-square'></i>
                               <i class='bx bx-checkbox-square'></i>
