--- a/index.html
+++ b/index.html
@@ -203,12 +203,9 @@
                 <i class='bx bx-smile about__box-icon'></i>
                 <h3 class="about__title">I am</h3>
                 <p class="about__description">
-                  web developer, with a vast array of knowledge in many different 
-                  front end and back end languages,responsive frameworks, databases and best code practices. 
-                  Working for Mindcoopers, I am dedicated to perfecting my craft by learning from 
-                  most seasoned developers. 
-                  I take pride in delivering best solution for our clients based on their requirements to improve 
-                  their customer's experience through the website or mobile app.
+                  a web developer skilled in a wide range of front end and back end languages, responsive frameworks, databases, and best coding techniques.
+                  Committed to creating and improving applications and websites that are user-focused.
+                  I am delighted to provide the finest solutions to enhance user experience on website or mobile app.
                 </p>
                 <a href="#contact" class="button">Contact me</a>
               </div>
@@ -542,3 +539,5 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
+
