--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta name="keywords" content=" Anzindh, Anusindh, Anusindh Chatterjee ">
+    <meta name="description" content=" Anzindh Anusindh Chatterjee">
+    <meta name="author" content="Anusindh Chatterjee ">
     <!--=============== FAVICON ===============-->
     <link
       rel="shortcut icon"
