--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       type="image/x-icon"
     />
 
+
+    
+
     <!--=============== BOXICONS ===============-->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -164,7 +167,7 @@
 
                   <div class="info">
                     <div class="info__icon">
-                      <i class='bx bx-chevrons-down'></i>
+                      <i class='bx bxs-hand-down'></i>
                     </div>
 
                     <div class="info__border">
