Info icon changed to hands up arrow

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
                   <div class="info">
                     <div class="info__icon">
-                      <i class='bx bxs-hand-down'></i>
+                      <i class='bx bxs-hand-up' ></i>
                     </div>
 
                     <div class="info__border">
